Add missing note on clipspace

--- a/reports/fase4.tex
+++ b/reports/fase4.tex
@@ -436,7 +436,23 @@ O método é o seguinte:
   \label{fig:galaxy}
 \end{figure}
 
-\chapter{Exemplos de utilização} \label{chap:exemps} %referência cruzada
+\section{Movimento no espaço através de periférico}
+
+Através da função \href{https://www.khronos.org/registry/OpenGL-Refpages/gl2.1/xhtml/gluUnProject.xml}{\texttt{glUnProject}},
+é possível, através de ``\textit{input}'' predefinido (neste caso, o botão direito do rato), movimentar a posição
+da câmara no espaço global para a posição do cursor na janela.
+
+\chapter{Exemplo de utilização} \label{chap:exemps} %referência cruzada
+
+Observe-se na imagem abaixo o sistema solar, com a ``\textit{skybox}'' escolhida, assim como
+o ``cometa'' com trajetória numa curva de Catmull-Rom.
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[scale=0.4]{exemplo.png}
+  \caption{Imagem utilizada para pano de fundo}
+  \label{fig:exemplo}
+\end{figure}
 
 \chapter{Conclusão} \label{concl}
 
