Fix wrong caption in image

--- a/reports/fase4.tex
+++ b/reports/fase4.tex
@@ -450,7 +450,7 @@ o ``cometa'' com trajetória numa curva de Catmull-Rom.
 \begin{figure}[H]
   \centering
   \includegraphics[scale=0.4]{exemplo.png}
-  \caption{Imagem utilizada para pano de fundo}
+  \caption{Sistema solar com órbita de ecometa e Via Lácter visíveis}
   \label{fig:exemplo}
 \end{figure}
 
